fix paragraph style on mobile

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -492,6 +492,10 @@ footer {
     h2 {
         margin-top: 40px;
     }
+
+    #my-name {
+        font-size: 60px;
+    }
 }
 
 @media (max-width:410px) {
@@ -507,12 +511,20 @@ footer {
         font-size: 25px;
     }
 
+    .p-container {
+        width: 95vw;
+    }
+
     p {
         width: 85vw;
     }
 
     a {
         padding: 0;
+    }
+    
+    #my-name {
+        font-size: 50px;
     }
 }
 
@@ -523,5 +535,9 @@ footer {
 
     h3 {
         font-size: 20px;
+    }
+    
+    #my-name {
+        font-size: 40px;
     }
 }
